--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.8</version>
+        </dependency>
+
 
         <!--mysql驱动-->
         <dependency>
