--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
-                    <path>/travel</path>
+                    <path>/clims</path>
                 </configuration>
             </plugin>
             <plugin>
