--- a/src/main/resources/druid.properties
+++ b/src/main/resources/druid.properties
@@ -1,5 +1,5 @@
 driverClassName=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://127.0.0.1/warehouse?serverTimezone=UTC
+url=jdbc:mysql://127.0.0.1/chemical_lab_item_ms?serverTimezone=UTC
 username=root
 password=123456
 initialSize=5
