更新采/领借/废的申请表、出/入库表的前端页面，实现采购申请中部分数据的保存(未包含采购清单)

--- a/src/main/resources/druid.properties
+++ b/src/main/resources/druid.properties
@@ -1,7 +1,7 @@
 driverClassName=com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://127.0.0.1/chemical_lab_item_ms?serverTimezone=UTC
 username=root
-password=20020107mysql
+password=123456
 initialSize=5
 maxActive=10
 maxWait=3000
